<resources>
    <string name="app_name">Sistema Inspector</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="email">Correo Electrónico</string>
    <string name="pass">Contraseña</string>
    <string name="text_button_login">Ingresar</string>
    <string name="ayuntamiento">H. AYUNTAMIENTO DE CARMEN - COORDINACIÓN DE GOBERNACIÓN MUNICIPAL</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nombre Completo</string>
    <string name="nav_header_subtitle">correo@gob.com.mx</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_lector">LectorActivity</string>
    <string name="error_camara">no permisos</string>
    <string name="searchfolio">Folio</string>
    <string name="text_button_search_folio">Inspeccionar folio</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment1">Hello blank fragment 1</string>
    <string name="hello_blank_fragment2">Hello blank fragment 2</string>
    <string name="hello_blank_fragment3">Hello blank fragment 3</string>
    <string name="textvigencia">Vigencia: </string>
    <string name="textvigenciaComerciante">31 de Diciembre del 2019</string>


    <string name="info_propetario">Información General</string>
    <string name="info_comercio">Información del Comercio</string>
    <string name="info_ubicacion">Ubicación</string>
    <string name="info_adicional">Información Adicional</string>
    <string name="descarga_documentacion">Descarga de Documentos</string>
    <string name="action_save">Enviar</string>
    <string name="title_activity_maps">Map</string>
    <string name="estructura">Tipo de Estructura:</string>
</resources>
