<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.7">

                <ImageView
                    android:id="@+id/login_carmen"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:background="@drawable/fondo"
                    android:scaleType="centerCrop"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/rojo"
                    android:layout_alignParentBottom="true"
                    >

                </RelativeLayout>
            </RelativeLayout>
            
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="0.8">

                        <ImageView
                            android:onClick="verificaiconURL"
                            android:id="@+id/login_logo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:background="@drawable/logoinspector"/>

                    </RelativeLayout>



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding_horizontal_login"
                            android:orientation="vertical">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:theme="@style/EditTextLoginBlack">

                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/userEmail"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/email"/>

                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:theme="@style/EditTextLoginBlack">

                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/userPass"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/pass"
                                    android:inputType="textPassword"/>

                            </android.support.design.widget.TextInputLayout>
                            <RadioButton
                                android:id="@+id/RBsesion"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="No Cerrar Sesión"/>

                            <Button
                                android:id="@+id/login"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/text_button_login"
                                android:theme="@style/RaisedButtonDark"
                                android:onClick="goLoginAccount"/>

                        </LinearLayout>





                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:layout_alignParentBottom="true"
                                android:background="@color/gris"
                                android:layout_centerInParent="true">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:text="@string/ayuntamiento"
                                    android:textColor="@android:color/white"/>
                            </RelativeLayout>
                        </RelativeLayout>

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>




        </LinearLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>



